--- a/src/app/side-panel/side-panel-block/side-panel-block.component.css
+++ b/src/app/side-panel/side-panel-block/side-panel-block.component.css
@@ -2,16 +2,21 @@
 :host {
   display: flex;
   flex-direction: column;
+  flex-basis: 100%;
+  gap: 5px;
 }
 
+
+/*   Blocks   */
+
 .side-panel-block {
-  display: block;
   position: relative;
-  margin: 4px 0;
-  padding: 4px 10px 4px 15px;
-  border-radius: 3px;
-  text-shadow: 1px 1px #080808;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px 8px 5px 10px;
+  border-radius: 4px;
   letter-spacing: 0.02em;
+  text-shadow: 1px 1px #080808;
 }
 
 .side-panel-block:before {
@@ -22,99 +27,206 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: #111;
   border-radius: 4px;
+  background: #111;
   box-shadow: 0 0 3px 3px #141414 inset;
 }
 
-.side-panel-links-container-subdivisions {
-  position: relative;
-  z-index: 10;
-  animation: fadeIn .3s;
+.side-panel-block.no-subdivisions {
+  padding: 0;
 }
 
-.side-panel-link {
+
+/*   Timeline Division   */
+
+.side-panel-division {
+  display: flex;
+  flex-basis: 100%;
+}
+
+.division-link {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 0 2px 2px 2px;
+  border-radius: 6px;
   cursor: pointer;
   transition: .2s;
 }
 
-.side-panel-link.type-eon {
+.side-panel-block.type-era.block-collapsed .division-link,
+.side-panel-block.type-period.block-collapsed .division-link {
+  padding-bottom: 0;
+  border-radius: 4px;
+}
+
+.side-panel-block.no-subdivisions .division-link,
+.side-panel-block.type-era.block-collapsed.no-subdivisions .division-link,
+.side-panel-block.type-period.block-collapsed.no-subdivisions .division-link  {
+  padding: 5px 8px 5px 10px;
+}
+
+.division-name {
+  padding-left: 4px;
+  border-bottom: 1px dotted #666;
+  transition: .2s;
+}
+
+.side-panel-block.no-subdivisions .division-name {
+  padding: 0;
+}
+
+.side-panel-block.no-subdivisions.type-eon .division-name {
+  padding-left: 4px;
+}
+
+.side-panel-block.block-collapsed .division-name {
+  padding-bottom: 0;
+  border-color: transparent;
+}
+
+.side-panel-block.block-collapsed.type-eon .division-name {
+  border-color: #666;
+}
+
+.side-panel-block.type-eon .division-name {
   font-size: 20px;
 }
 
-.side-panel-link.type-era {
+.side-panel-block.type-era .division-name {
   font-size: 18px;
 }
 
-.side-panel-link.type-period {
+.side-panel-block.type-period .division-name {
   font-size: 17px;
 }
 
-.side-panel-link.type-epoch {
+.side-panel-block.type-epoch .division-name {
   font-size: 16px;
 }
 
-.side-panel-links-container-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  padding: 0 8px;
-  background: rgba(0, 0, 0, .15);
+.division-duration {
+  display: flex;
+  padding-left: 4px;
   color: #999;
-  border-radius: 4px;
-  font-size: smaller;
-  cursor: pointer;
-  user-select: none;
-}
-
-.side-panel-links-container-button.type-eon {
-  height: 25px;
-  line-height: 25px;
-}
-
-.side-panel-links-container-button.type-era {
-  height: 23px;
-  line-height: 22px;
-}
-
-.side-panel-links-container-button.type-period {
-  height: 22px;
-  line-height: 21px;
-}
-
-.side-panel-links-container-button-triangle {
+  font-size: 14px;
+  color: #9c815f;
   animation: fadeIn .3s;
 }
 
+.side-panel-block.type-era.no-subdivisions .division-duration,
+.side-panel-block.type-period.no-subdivisions .division-duration,
+.side-panel-block.type-epoch .division-duration,
+.side-panel-block.type-era.block-collapsed .division-duration,
+.side-panel-block.type-period.block-collapsed .division-duration {
+  display: none;
+}
+
+.division-duration span:first-of-type {
+  margin-right: .5em;
+}
+
 @media (hover: hover) {
-  .side-panel-link:hover {
+  .division-link:hover {
+    background: rgba(255, 255, 255, .045);
+  }
+  .side-panel-block.type-era.no-subdivisions .division-link:hover,
+  .side-panel-block.type-period.no-subdivisions .division-link:hover,
+  .side-panel-block.type-epoch .division-link:hover {
+    background: rgba(255, 255, 255, .025);
+  }
+  .division-link:hover .division-name {
     color: #ccc;
   }
 }
 
 @media (max-width: 599px) {
-  .side-panel-link.type-eon {
+  .division-link {
+    padding: 0;
+  }
+  .division-name {
+    border-bottom: none;
+  }
+  .side-panel-block.type-eon .division-name {
     font-size: 18px;
   }
-  .side-panel-link.type-era {
+  .side-panel-block.type-era .division-name {
     font-size: 16px;
   }
-  .side-panel-link.type-period {
+  .side-panel-block.type-period .division-name {
     font-size: 15px;
   }
-  .side-panel-link.type-epoch {
+  .side-panel-block.type-epoch .division-name {
     font-size: 14px;
   }
-  .side-panel-links-container-button.type-eon {
-    height: 23px;
-    line-height: 22px;
+  .division-duration {
+    display: none;
   }
-  .side-panel-links-container-button.type-era {
-    height: 21px;
-    line-height: 20px;
+}
+
+
+/*   Expand/Collapse Button   */
+
+.subdivisions-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  margin-left: 15px;
+  background: rgba(0, 0, 0, .15);
+  color: #888;
+  border-radius: 6px;
+  cursor: pointer;
+  user-select: none;
+  transition: .2s;
+}
+
+.side-panel-block.type-era.block-collapsed .subdivisions-button,
+.side-panel-block.type-period.block-collapsed .subdivisions-button {
+  border-radius: 4px;
+  font-size: smaller;
+}
+
+.subdivisions-button-triangle {
+  animation: fadeIn .3s;
+}
+
+@media (hover: hover) {
+  .subdivisions-button:hover {
+    background: rgba(0, 0, 0, .2);
+    color: #999;
   }
-  .side-panel-links-container-button.type-period {
-    height: 21px;
-    line-height: 20px;
+}
+
+@media (max-width: 599px) {
+  .subdivisions-button {
+    width: 34px;
+    border-radius: 3px;
+    font-size: smaller;
+  }
+}
+
+
+/*   Subdivisions   */
+
+.subdivisions-container {
+  position: relative;
+  z-index: 10;
+  display: flex;
+  flex-basis: 100%;
+  padding: 6px 0;
+  animation: fadeIn .3s;
+}
+
+.vertical-line {
+  display: flex;
+  height: 100%;
+  margin: 0 10px 0 2px;
+  border-left: 1px dashed #9e8261;
+}
+
+@media (max-width: 599px) {
+  .vertical-line {
+    display: none;
   }
 }
