--- a/src/app/side-panel/side-panel/side-panel.component.css
+++ b/src/app/side-panel/side-panel/side-panel.component.css
@@ -11,21 +11,18 @@
   top: 10px;
   right: 10px;
   z-index: 10001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 40px;
   height: 40px;
   border: 4px solid #3f3427;
   border-radius: 50%;
   background: #222;
-  text-align: center;
   user-select: none;
   cursor: pointer;
   animation: fadeIn .3s;
   transition: .2s;
-}
-
-.side-panel-button.button-hidden {
-  opacity: 0;
-  pointer-events: none;
 }
 
 .side-panel-button-hamburger,
@@ -34,13 +31,13 @@
 }
 
 .side-panel-button-hamburger {
+  height: 38px;
   font-size: 26px;
-  line-height: 38px;
 }
 
 .side-panel-button-cross {
+  height: 27px;
   font-size: 16px;
-  line-height: 36px;
 }
 
 @media (hover: hover) {
@@ -55,22 +52,28 @@
     top: 5px;
     right: 5px;
   }
+  .side-panel-button.button-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 
 /*   Panel   */
 
 .side-panel {
+  display: flex;
+  flex-direction: column;
   position: fixed;
   box-sizing: border-box;
   top: 0;
   right: -600px;
   z-index: 10000;
-  width: min(calc(100% - 30px), 600px);
+  width: min(100% - 30px, 600px);
   height: 100vh;
   padding: 10px 10px 50px 10px;
   border-left: 4px solid #3f3427;
-  background: repeating-linear-gradient(-45deg, #111, #111 10px, #181818 12px);
+  background: repeating-linear-gradient(-45deg, #111 0, #111 10px, #181818 11px, #181818 12px);
   transition: .4s;
   overflow-y: scroll;
   scrollbar-width: none;
@@ -85,8 +88,10 @@
 }
 
 .side-panel-header {
-  padding: 10px;
+  margin-bottom: 5px;
+  padding: 8px 50px 12px 10px;
   color: #9c815f;
+  text-align: center;
   font-size: 24px;
   letter-spacing: .02em;
 }
