Update footer, add notes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,10 @@
 </div>
 
 <!-- Timeline -->
-<app-timeline>
-</app-timeline>
+<app-timeline></app-timeline>
 
 <!-- Side Panel -->
-<app-side-panel>
-</app-side-panel>
+<app-side-panel></app-side-panel>
 
 <!-- Footer -->
-<div class="footer"></div>
+<app-footer></app-footer>
