--- a/src/app/timeline/timeline/timeline.component.css
+++ b/src/app/timeline/timeline/timeline.component.css
@@ -2,8 +2,9 @@
 :host {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
   justify-content: center;
+  width: 100%;
+  margin-bottom: 150px;
 }
 
 
