--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,11 +5,11 @@
   </div>
   <div class="footer-column-body">
     <ul>
-      <li>This is a purely non-commercial project that is made for fun and for educational purposes.</li>
-      <li>The author has no formal degree in geology or related sciences. Most of the data is compiled from Wikipedia articles and other educational resources. While the intent was to be as accurate as possible, there may be some small mistakes.</li>
-      <li>The timeline structure actually goes deeper. For instance, there are epochs in each period of the Mesozoic era, and epochs can be further subdivided into ages. The goal here was not to list everything, but to go reasonably deep and provide a meaningful overview.</li>
-      <li>The images for each section were picked to visually represent something typical for that time interval, such as a landscape or animals. Even if it's just an artist's impression, it should be at least somewhat close to reality.</li>
-      <li>The color scheme is based on the standard for geological time scale according to the Commission for the Geological Map of the World (CGMW). In some cases, the colors are adjusted for a better look.</li>
+      <li>This is a purely non-commercial project made for fun and for educational purposes.</li>
+      <li>The author has no formal degree in geology or related sciences. Most of the data is compiled from Wikipedia articles and other educational resources. While the intent was to be as factually correct as possible, there may be some inaccuracies.</li>
+      <li>The timeline structure actually goes deeper: epochs can be further subdivided into ages, there are epochs defined for each period within the Mesozoic era, and so on. The goal here was not to list everything, but to go reasonably deep and provide a meaningful overview.</li>
+      <li>The images for each section were picked to visually represent something common to that time, such as typical landscapes or animals. For very early eras and periods, simply nothing meaningful could be found, so those are left with no illustrations.</li>
+      <li>The color scheme is based on the standard for geological time scale according to the Commission for the Geological Map of the World (CGMW). In some cases, the colors have been adjusted for a better look.</li>
     </ul>
   </div>
 
